# GOTHiC

./: CMakeLists.txt  README.md  gothic.conf  gothicomp.conf  installGOTHiCSource.txt
example_data/: example_Test_Data.txt
source/: BinomData.cpp  BinomData.h  CMakeLists.txt  Utils.cpp  Utils.h  gothic.cpp  gothic.h  hicupData.cpp  hicupData.h
src/: .hicupData.cpp.swn  .hicupData.cpp.swo  Baits.cpp  Baits.h  BinomData.cpp  BinomData.h  BinomDataComp.cpp  BinomDataComp.h  CMakeLists.txt  IHW.cpp  IHW.h  Interactions.cpp  Interactions.h  JointUtils.cpp  JointUtils.h  Setup.cpp  Setup.h  SetupComp.cpp  SetupComp.h  SetupData.cpp  SetupData.h  Site.cpp  Site.h  Test.cpp  Test.cpp.bak  Utils.cpp  Utils.h  UtilsComp.cpp  UtilsComp.h  add_copy.sh  bd0.c  bd0.h  binTest.cpp  binTest.h  binom.cpp  binom.h  binomTest.cpp  binomTest.h  dbinom.c  dbinom.h  (+30 more)
test/: CMakeLists.txt  main.cpp  test.cpp
tests/: CMakeLists.txt  IHWTest.cpp  binInterTest.cpp  binomTestTest.cpp  binomialTest.cpp  calcFreqTest.cpp  countDupsTest.cpp  countDupsTests.cpp  findCisTest.cpp  findTransTest.cpp  fixChromoTest.cpp  halfInteractionTest.cpp  hicupCompFreqTest.cpp  hicupCompInterTest.cpp  hicupTest.cpp  hicupTests.cpp  importHicupTest.cpp  importHicupTests.cpp  overlapTest.cpp  overlapTests.cpp  pBhAdjustTest.cpp  randomTest.cpp  removeDupsTest.cpp  sortPositionsTest.cpp  sumSquareCompTest.cpp  sumSquareTest.cpp  sysTests.cpp  tests.cpp
